--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -9,6 +9,10 @@ p {
     font-size: 20px;
 }
 
+p.lead {
+    font-size: 2rem;
+}
+
 p.small {
     font-size: 16px;
 }
@@ -75,17 +79,17 @@ header .intro-text .name {
     display: block;
     text-transform: uppercase;
     font-family: 'proxima-nova',"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: 700;
 }
 
 header .intro-text .skills {
-    font-size: 1.25em;
+    font-size: 1.25rem;
     font-weight: 300;
 }
 
 header h1 {
-    font-size: 5em;
+    font-size: 5rem;
 }
 
 nav {
@@ -93,11 +97,15 @@ nav {
 }
 
 nav a {
-    color: rgba(255,255,255,0.9);
+    color: rgba(255,255,255,0.8);
 }
 
 nav a:hover {
     color: rgba(255,255,255,1);
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+    background-color: rgba(0,0,0,0);
 }
 
 #header-logo {
@@ -111,11 +119,11 @@ nav a:hover {
     }*/
 
     header .intro-text .name {
-        font-size: 4.75em;
+        font-size: 4.75rem;
     }
 
     header .intro-text .skills {
-        font-size: 1.75em;
+        font-size: 1.75rem;
     }
 }
 
@@ -128,7 +136,7 @@ nav a:hover {
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 2em;
+        font-size: 3rem;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -139,7 +147,7 @@ nav a:hover {
     }
 
     .navbar-fixed-top.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
+        font-size: 2.5rem;
     }
 }
 
@@ -199,7 +207,7 @@ section {
 section h2 {
     text-align: left;
     margin: 0 0 20px 0;
-    font-size: 3em;
+    font-size: 3rem;
     font-weight: 800;
 }
 
@@ -209,7 +217,7 @@ section h2 {
     border-bottom: 1px solid rgba(0,0,0,0.1);
     padding: 20px 0;
     margin-bottom: 40px;
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: 100;
 }
 
@@ -280,7 +288,9 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+    font-size: 2.25rem;
     margin-top: -12px;
+    margin-bottom: 6px;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
@@ -290,6 +300,19 @@ section.success {
 
 #portfolio * {
     z-index: 2;
+}
+
+#portfolio .client-name {
+    text-transform: uppercase;
+}
+
+#portfolio p {
+    font-size: 1.25rem;
+}
+
+#portfolio p>small {
+    font-size: 0.7rem;
+    font-style: italic;
 }
 
 @media(min-width:767px) {
@@ -319,7 +342,7 @@ section.success {
 .floating-label-form-group {
     position: relative;
     margin-bottom: 0;
-    padding-bottom: .5em;
+    padding-bottom: .5rem;
     border-bottom: 1px solid #eee;
 }
 
@@ -331,7 +354,7 @@ section.success {
     padding-left: 0;
     border: 0;
     border-radius: 0;
-    font-size: 1.25em;
+    font-size: 1.25rem;
     background: 0 0;
     box-shadow: none!important;
     resize: none;
@@ -341,10 +364,10 @@ section.success {
     display: block;
     z-index: 0;
     position: relative;
-    top: 2em;
+    top: 2rem;
     margin: 0;
-    font-size: .85em;
-    line-height: 1.764705882em;
+    font-size: .85rem;
+    line-height: 1.764705882rem;
     vertical-align: middle;
     vertical-align: baseline;
     opacity: 0;
@@ -451,7 +474,7 @@ footer .footer-below {
 
 .portfolio-modal .modal-content h2 {
     margin: 0;
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 .portfolio-modal .modal-content img {
@@ -505,4 +528,20 @@ footer .footer-below {
 
 .pattern-overlay.subdued {
     background: rgba(0,0,0,0.5);
+}
+
+.headroom--pinned {
+    display: block;
+}
+
+.headroom {
+    transition: transform 200ms linear;
+}
+
+.headroom--pinned {
+    transform: translateY(0%);
+}
+
+.headroom--unpinned {
+    transform: translateY(-100%);
 }
