--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/stripe/css/stripe-font.css" | prepend: site.baseurl }}">
 
     <script type="text/javascript" src="//use.typekit.net/lme7wgr.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
