--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
    <!-- Navigation -->
-    <nav class="navbar navbar-fixed-top">
+    <nav class="navbar navbar-fixed-top headroom">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -44,7 +44,7 @@
                     <div class="col-lg-12">
                         <h1>We're <strong>Pinecode.</strong></h1>
                         <hr>
-                        <p class="lead"><em>Pinecode is a web development and design consultancy based in Victoria, BC, Canada. We specialize in WordPress plugins and doing things you could do if you used Google better.</em></p>
+                        <p class="lead"><em>Pinecode is a web development and design consultancy based in Victoria, BC, Canada. I hope Daniel comes up with something intelligent or clever to put here.</em></p>
                     </div>
                 </div>
             </div>
