--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -12,8 +12,8 @@
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <p><i class="fa fa-search-plus fa-2x"></i></p>
-                                    <p>{{ post.client }}</p>
+                                    <p><i class="icon medium icon-search"></i></p>
+                                    <p class="client-name">{{ post.client }}</p>
                                     <p><small>{{ post.category }}</small></p>
                                 </div>
                             </div>
