--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -10,7 +10,7 @@ p {
 }
 
 p.lead {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 p.small {
@@ -89,7 +89,7 @@ header .intro-text .skills {
 }
 
 header h1 {
-    font-size: 5rem;
+    font-size: 5.5rem;
 }
 
 nav {
@@ -271,12 +271,11 @@ section.success {
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
     position: absolute;
-    top: 32.5%;
+    top: 27.5%;
     width: 100%;
     height: 20px;
     margin-top: -12px;
     text-align: center;
-    font-size: 20px;
     color: #fff;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
@@ -284,13 +283,11 @@ section.success {
 }
 
 #portfolio .portfolio-item:hover .portfolio-link .caption .caption-content {
-    top: 35%;
+    top: 30%;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
-    font-size: 2.25rem;
-    margin-top: -12px;
-    margin-bottom: 6px;
+    font-size: 5rem;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
@@ -302,16 +299,17 @@ section.success {
     z-index: 2;
 }
 
-#portfolio .client-name {
-    text-transform: uppercase;
+#portfolio p {
+    font-size: 2.25rem;
 }
 
-#portfolio p {
-    font-size: 1.25rem;
+#portfolio .client-name {
+    text-transform: uppercase;
+    margin-bottom: 0;
 }
 
 #portfolio p>small {
-    font-size: 0.7rem;
+    font-size: 1.75rem;
     font-style: italic;
 }
 
