--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,7 @@
     </nav>
 
     <header class="content-section">
+        <div class="grid-bg"></div>
         <div class="pattern-overlay subdued">
             <div class="container">
                 <div class="row parallax">
