Added geometry grid to header and removed portfolio link/content

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             <hr>
             <div class="row">
                 <div class="col-lg-6">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus voluptate ullam quaerat non odio aspernatur, voluptatibus ducimus dolorem nesciunt distinctio voluptates sit ea, in dolorum quae minima excepturi fugit at?</p>
+                    <p>Pinecode is the collaboration of experienced developers and designers from the Victoria startup scene. We are the <strong>fucking best.</strong></p>
                 </div>
                 <div class="col-lg-6">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, necessitatibus natus harum ipsam esse, cumque quod id culpa? Mollitia repellendus autem neque sapiente dolorem consequatur consequuntur voluptatum ratione laborum sequi!</p>
+                    <p>Daniel can probably come up with a better way to sell us than I can, so I'm just putting dummy text here until he writes some copy.</p>
                 </div>
             </div>
         </div>
