--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family='proxima-nova':300,400,300italic,400italic);
+@import url(http://fonts.googleapis.com/css?family='allumi-std':300,400,300italic,400italic);
 
 body {
     overflow-x: hidden;
@@ -11,6 +11,7 @@ p {
 
 p.lead {
     font-size: 3rem;
+    font-weight: 100;
 }
 
 p.small {
@@ -33,8 +34,8 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: 'proxima-nova', "Open Sans", Helvetica,Arial,sans-serif;
-    font-weight: 300;
+    font-family: 'allumi-std', "Open Sans", Helvetica,Arial,sans-serif;
+    font-weight: 100;
 }
 
 hr {
@@ -77,7 +78,7 @@ header hr {
 header .intro-text .name {
     display: block;
     text-transform: uppercase;
-    font-family: 'proxima-nova',"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'allumi-std',"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2rem;
     font-weight: 700;
 }
@@ -92,7 +93,13 @@ header h1 {
 }
 
 nav {
-    background-color: rgba(0,0,0,0.85);
+    background-color: rgba(30,10,0,0.85);
+    box-shadow: 0 3px 0 rgba(0,0,0,0.1);
+    transition: background-color 0.5s ease;
+}
+
+nav.navbar-shrink {
+    background-color: rgba(30,10,0,0.95);
 }
 
 nav a {
@@ -117,7 +124,7 @@ nav a:hover {
     position: absolute;
     z-index: 999;
     background-image: url('/img/grid.png');
-    background-position: 50% 75%;
+    background-position: 50% 50%;
     overflow: visible;
 }
 
@@ -162,7 +169,7 @@ nav a:hover {
 
 .navbar {
     text-transform: uppercase;
-    font-family: 'proxima-nova',"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'allumi-std',"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .navbar-header {
