--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,17 +11,25 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-2">
-                    <p>Service 1</p>
+                <div class="col-lg-2 service">
+                    <i class="entypo search"></i>
+                    <h3>UI/UX</h3>
+                    <p>Here's a description of the service.</p>
                 </div>
-                <div class="col-lg-2 col-lg-offset-1">
-                    <p>Service 2</p>
+                <div class="col-lg-2 service col-lg-offset-1">
+                    <i class="entypo search"></i>
+                    <h3>Web Development</h3>
+                    <p>Here's a description of the service.</p>
                 </div>
-                <div class="col-lg-2 col-lg-offset-1">
-                    <p>Service 3</p>
+                <div class="col-lg-2 service col-lg-offset-1">
+                    <i class="entypo search"></i>
+                    <h3>Design</h3>
+                    <p>Here's a description of the service.</p>
                 </div>
-                <div class="col-lg-2 col-lg-offset-1">
-                    <p>Service 4</p>
+                <div class="col-lg-2 service col-lg-offset-1">
+                    <i class="entypo search"></i>
+                    <h3>Content</h3>
+                    <p>Here's a description of the service.</p>
                 </div>
             </div>
         </div>
