--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <span><img src="img/logo32.png" alt="pinecode logo"></span> <a class="navbar-brand" href="#page-top">{{ site.title }}</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo48.png" alt="pinecode logo"> {{ site.title }}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,14 +18,14 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-<!--                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+<!--                     <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li> -->
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -44,8 +44,8 @@
                     </div> -->
                     <div class="col-lg-12">
                         <h1>We're <strong>Pinecode.</strong></h1>
-                        <hr>
                         <p class="lead"><em>Pinecode is a web development and design consultancy based in Victoria, BC, Canada. I hope Daniel comes up with something intelligent or clever to put here.</em></p>
+                        <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
                     </div>
                 </div>
             </div>
