--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
  <!-- About Section -->
-    <section class="inverted about parallax" id="about">
+    <section class="about parallax" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
