--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="col-lg-2 service col-lg-offset-1">
                     <i class="entypo search"></i>
-                    <h3>Web Development</h3>
+                    <h3>Development</h3>
                     <p>Here's a description of the service.</p>
                 </div>
                 <div class="col-lg-2 service col-lg-offset-1">
