More layout updates

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,16 +3,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <div class="divider">
+                        <h2>Who Is Pinecode?</h2>
+                    </div>
+                    <div class="section-overview">
+                        <p>I envision images of us staring awestruck into oblivion, tastefully overlaid on cascading hills of pine, glowing in the sun.</p>
+                    </div>
                 </div>
             </div>
-            <hr>
             <div class="row">
-                <div class="col-lg-6">
-                    <p>Pinecode is the collaboration of experienced developers and designers from the Victoria startup scene. We are the <strong>fucking best.</strong></p>
+                <div class="col-lg-3 service">
+                    <h3>Daniel Good</h3>
+                    <p>Daniel once performed in a Rambo sequel, credited as 'The guy who fell down the cliff at the river'. Interestingly, he wasn't yet born when the movie was filmed.</p>
                 </div>
-                <div class="col-lg-6">
-                    <p>Daniel can probably come up with a better way to sell us than I can, so I'm just putting dummy text here until he writes some copy.</p>
+                <div class="col-lg-3 service col-lg-offset-1">
+                    <h3>Brad Melanson</h3>
+                    <p>Brad once bravely saved a young boy from himself by deciding not to kick his sorry ass. In his spare time, he beats up children.</p>
+                </div>
+                <div class="col-lg-3 service col-lg-offset-1">
+                    <h3>Steve Adams</h3>
+                    <p>Steve's origins are unknown, but he tells people he meets 'Oh cool, me too' when they tell him where they're from.</p>
                 </div>
             </div>
         </div>
