--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,7 +3,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Services</h2>
+                    <div class="divider">
+                        <h2>Services</h2>
+                    </div>
                     <div class="section-overview">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit excepturi recusandae veniam officia optio aliquid tenetur quos ratione ducimus quidem dolorum enim accusamus nam, facere officiis illum ab velit quam.</p>
                     </div>
@@ -11,25 +13,20 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-2 service">
-                    <i class="entypo search"></i>
+                <div class="col-lg-3 service">
+                    <img src="img/service-bubbles/ui-ux.png" alt="UI / UX">
                     <h3>UI/UX</h3>
-                    <p>Here's a description of the service.</p>
+                    <p>We know a guy who once put buttons on a website that did a bit more than you'd expect.</p>
                 </div>
-                <div class="col-lg-2 service col-lg-offset-1">
-                    <i class="entypo search"></i>
+                <div class="col-lg-3 service col-lg-offset-1">
+                    <img src="img/service-bubbles/development.png" alt="Development">
                     <h3>Development</h3>
-                    <p>Here's a description of the service.</p>
+                    <p>We made a WordPress website and we want to make you one too!</p>
                 </div>
-                <div class="col-lg-2 service col-lg-offset-1">
-                    <i class="entypo search"></i>
+                <div class="col-lg-3 service col-lg-offset-1">
+                    <img src="img/service-bubbles/design.png" alt="Design">
                     <h3>Design</h3>
-                    <p>Here's a description of the service.</p>
-                </div>
-                <div class="col-lg-2 service col-lg-offset-1">
-                    <i class="entypo search"></i>
-                    <h3>Content</h3>
-                    <p>Here's a description of the service.</p>
+                    <p>We only design the best, most desirable, bespoke, and utterly sensual designs.</p>
                 </div>
             </div>
         </div>
