--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,11 +3,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact us</h2>
+                    <div class="divider">
+                        <h2>Get In Touch</h2>
+                    </div>
                 </div>
             </div>
+            <br>
+            <br>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" action="/mail/contact.php" novalidate>
