--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -25,6 +25,7 @@ a:active,
 a.active {
     outline: 0;
     color: #{{ site.color.primary }};
+    text-decoration: none;
 }
 
 h1,
@@ -36,6 +37,10 @@ h6 {
     text-transform: uppercase;
     font-family: 'allumi-std', "Open Sans", Helvetica,Arial,sans-serif;
     font-weight: 100;
+}
+
+h2 {
+    color: rgba(0,0,0,0.9);
 }
 
 hr {
@@ -81,7 +86,7 @@ header p.lead {
     margin: 20px auto 30px;
 }
 
-header .btn {
+header .btn, .btn-social {
     text-transform: uppercase;
     font-weight: 600
 }
@@ -217,32 +222,100 @@ section {
 }
 
 section h2 {
-    text-align: left;
-    margin: 0 0 20px 0;
+    margin: 0;
     font-size: 3rem;
     font-weight: 800;
 }
 
 .section-overview {
     text-align: left;
-    border-top: 1px solid rgba(0,0,0,0.1);
-    border-bottom: 1px solid rgba(0,0,0,0.1);
     padding: 20px 0;
-    margin-bottom: 40px;
     font-size: 2rem;
     font-weight: 100;
+}
+
+
+
+.bg-dark-grey {
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.bg-grey {
+    background-color: rgba(0, 0, 0, 0.85);
+}
+
+.bg-brown {
+    background-color: rgba(30, 10, 0, 0.9);
+}
+
+.bg-blue {
+    background-color: rgba(0, 130, 255, 1);
+}
+
+.bg-pine {
+    background-color: rgba(66, 164, 0, 1);
+}
+
+.bg-coral {
+    background-color: rgba(255, 54, 89, 1);
+}
+
+.text-brown {
+    color: rgba(30,10,0,0.85);
+}
+
+.text-blue {
+    color: rgba(0, 130, 255, 0.9);
+}
+
+.text-pine {
+    color: rgba(66, 164, 0, 0.9);
+}
+
+.text-coral {
+    color: rgba(255, 54, 89, 0.9);
 }
 
 .section-overview p {
     margin: 0;
 }
 
+#services {
+    /*background-color: rgb(220, 247, 242);*/
+}
+
 .service, .service h3 {
     text-align: center;
+    margin-top: 2rem;
+}
+
+.service h3 {
+    font-weight: 500;
+    margin: 0 auto;
+    padding: 2rem 0;
+    border-bottom: 1px solid rgba(0,0,0,0.15);
+}
+
+.service {
+    padding: 0;
 }
 
 .service p {
     font-size: 1.5rem;
+    margin: 0;
+    padding: 1.5rem 1rem;
+}
+
+.service img {
+    max-width: 176px;
+    width: 100%;
+}
+
+#about {
+    background-image: url('img/swash/waves.jpg');
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
+    background-position: 50%
+    background-size: cover;
 }
 
 @media(max-width:767px) {
@@ -348,13 +421,13 @@ section h2 {
 .btn-outline.active {
     border-color: rgba(255, 255, 255, 0);
     color: #fff;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.15);
 }
 
 .floating-label-form-group {
     position: relative;
     margin-bottom: 0;
-    padding-bottom: .5rem;
+    padding: 0 0 1rem 0;
     border-bottom: 1px solid #eee;
 }
 
@@ -366,7 +439,7 @@ section h2 {
     padding-left: 0;
     border: 0;
     border-radius: 0;
-    font-size: 1.25rem;
+    font-size: 1.75rem;
     background: 0 0;
     box-shadow: none!important;
     resize: none;
@@ -376,12 +449,13 @@ section h2 {
     display: block;
     z-index: 0;
     position: relative;
-    top: 2rem;
+    top: 1rem;
     margin: 0;
-    font-size: .85rem;
+    font-size: 1.5rem;
     line-height: 1.764705882rem;
     vertical-align: middle;
     vertical-align: baseline;
+    color: rgba(66, 164, 0, 0.85);
     opacity: 0;
     -webkit-transition: top .3s ease,opacity .3s ease;
     -moz-transition: top .3s ease,opacity .3s ease;
@@ -395,12 +469,13 @@ section h2 {
 }
 
 .floating-label-form-group-with-value label {
-    top: 0;
+    font-weight: 100;
+    top: 1rem;
     opacity: 1;
 }
 
 .floating-label-form-group-with-focus label {
-    color: #{{ site.color.primary }};
+    color: rgba(0,0,0,0.33);
 }
 
 form .row:first-child .floating-label-form-group {
@@ -417,7 +492,6 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #{{ site.color.secondary }};
 }
 
 footer .footer-col {
@@ -426,18 +500,16 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #{{ site.color.secondary-dark }};
 }
 
 .btn-social {
     display: inline-block;
     width: 50px;
     height: 50px;
-    border: 2px solid #fff;
     border-radius: 100%;
     text-align: center;
     font-size: 20px;
-    line-height: 45px;
+    line-height: 55px;
 }
 
 .btn:focus,
@@ -533,13 +605,13 @@ footer .footer-below {
 }
 
 .pattern-overlay {
-    background: rgba(0,0,0,0.75);
+    background: rgba(0,0,0,0.65);
     padding: 75px 0 32px;
     height: 100%;
 }
 
 .pattern-overlay.subdued {
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.35);
 }
 
 .headroom--pinned {
@@ -564,4 +636,138 @@ footer .footer-below {
 
 .inverted hr {
     border-top: 1px solid rgba(255,255,255,.15);
+}
+
+.inverted h2 {
+    color: #fff;
+}
+
+/*
+ * # Semantic - Divider
+ * http://github.com/jlukic/semantic-ui/
+ *
+ *
+ * Copyright 2013 Contributors
+ * Released under the MIT license
+ * http://opensource.org/licenses/MIT
+ *
+ */
+
+
+/*******************************
+            Divider
+*******************************/
+
+.divider {
+  margin: 0rem;
+
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
+  line-height: 1;
+  height: 0em;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.divider {
+  position: absolute;
+
+  border: none;
+  height: 0em;
+  margin: 0em;
+  background-color: transparent;
+
+  font-size: 0.875rem;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: rgba(0, 0, 0, 0.8);
+}
+
+/*--------------
+    Horizontal
+---------------*/
+
+.divider {
+  position: relative;
+  top: 0%;
+  left: 0%;
+
+  /*margin: 1rem 1.5rem;*/
+  height: auto;
+  padding: 0em;
+
+  line-height: 1;
+}
+
+.divider:before,
+.divider:after {
+  position: absolute;
+  top: 50%;
+  content: " ";
+  z-index: 3;
+
+  width: 30%;
+  top: 50%;
+  height: 0%;
+
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.divider:before {
+  left: 0%;
+  margin-left: -1.5rem;
+}
+.divider:after {
+  left: auto;
+  right: 0%;
+  margin-right: -1.5rem;
+}
+
+/*--------------
+      Icon
+---------------*/
+
+.divider > .icon {
+  margin: 0em;
+  font-size: 1rem;
+  vertical-align: middle;
+}
+
+
+/*******************************
+            Variations
+*******************************/
+
+
+/*--------------
+    Inverted
+---------------*/
+
+.divider.inverted {
+  color: rgba(255, 255, 255, 1);
+}
+.inverted.divider {
+  color: rgba(255, 255, 255, 0.9);
+}
+.divider.inverted,
+.divider.inverted:after,
+.divider.inverted:before {
+  border-top-color: rgba(0, 0, 0, 0.15);
+  border-bottom-color: rgba(255, 255, 255, 0.15);
+
+  border-left-color: rgba(0, 0, 0, 0.15);
+  border-right-color: rgba(255, 255, 255, 0.15);
 }
