--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above">
+        <div class="footer-above bg-dark-grey">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-6">
@@ -12,11 +12,11 @@
                         </p>
                     </div>
                     <div class="footer-col col-md-6">
-                        <h3>Around the Web</h3>
+                        <h3>Social</h3>
                         <ul class="list-inline">
                             {% for network in site.social %}
                             <li>
-                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
+                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="entypo-social {{ network.title }}"></i></a>
                             </li>
 		                    {% endfor %}
                         </ul>
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer-below">
+        <div class="footer-below bg-grey">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
