Updated design and contact layout, added autogrow to contact textarea

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,15 +14,15 @@
             <div class="row">
                 <div class="col-lg-3 service">
                     <h3>Daniel Good</h3>
-                    <p>Daniel once performed in a Rambo sequel, credited as 'The guy who fell down the cliff at the river'. Interestingly, he wasn't yet born when the movie was filmed.</p>
+                    <p>Once performed in a Rambo sequel, credited as 'The guy who fell down the cliff at the river'. Interestingly, he wasn't yet born when the movie was filmed.</p>
                 </div>
                 <div class="col-lg-3 service col-lg-offset-1">
                     <h3>Brad Melanson</h3>
-                    <p>Brad once bravely saved a young boy from himself by deciding not to kick his sorry ass. In his spare time, he beats up children.</p>
+                    <p>Has the ability to efficiently and coldly crush fifth graders with his bare hands - Lacking any remorse, emotion, or dishonor in doing so.</p>
                 </div>
                 <div class="col-lg-3 service col-lg-offset-1">
                     <h3>Steve Adams</h3>
-                    <p>Steve's origins are unknown, but he tells people he meets 'Oh cool, me too' when they tell him where they're from.</p>
+                    <p>Origins are unknown, but he tells people he meets 'Oh cool, me too' when they tell him where they're from.</p>
                 </div>
             </div>
         </div>
