--- a/_includes/js.html
+++ b/_includes/js.html
@@ -8,6 +8,7 @@
     <script src="{{ "/js/headroom.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/classie.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/js/jquery.autogrowtextarea.min.js" | prepend: site.baseurl }}"></script>
 
     <!-- Contact Form JavaScript -->
     <script src="{{ "/js/jqBootstrapValidation.js" | prepend: site.baseurl }}"></script>
