--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above bg-dark-grey">
+        <div class="footer-above">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-6">
