--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,8 @@
                     </div> -->
                     <div class="col-lg-12">
                         <h1>We're <strong>Pinecode.</strong></h1>
-                        <p class="lead"><em>Pinecode is a web development and design consultancy based in Victoria, BC, Canada. I hope Daniel comes up with something intelligent or clever to put here.</em></p>
+                        <p class="lead"><em>We do design, development, and ceaseless whining about PHP<br>
+                        in beautiful Victoria, BC, Canada.</em></p>
                         <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
                     </div>
                 </div>
