Updated service badges, removed filler content

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,22 +7,22 @@
                         <h2>Who Is Pinecode?</h2>
                     </div>
                     <div class="section-overview">
-                        <p>I envision images of us staring awestruck into oblivion, tastefully overlaid on cascading hills of pine, glowing in the sun.</p>
+                        <p>This section will be visible in 4-6 months. What should we put here in the mean time? Nothing?</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 service">
+                <div class="col-lg-4 service">
                     <h3>Daniel Good</h3>
-                    <p>Once performed in a Rambo sequel, credited as 'The guy who fell down the cliff at the river'. Interestingly, he wasn't yet born when the movie was filmed.</p>
+                    <p>Built the pyraminds before he was even born.</p>
                 </div>
-                <div class="col-lg-3 service col-lg-offset-1">
+                <div class="col-lg-4 service">
                     <h3>Brad Melanson</h3>
-                    <p>Has the ability to efficiently and coldly crush fifth graders with his bare hands - Lacking any remorse, emotion, or dishonor in doing so.</p>
+                    <p>Invented the suplex in 1945 whie single handedly ending WWII.</p>
                 </div>
-                <div class="col-lg-3 service col-lg-offset-1">
+                <div class="col-lg-4 service">
                     <h3>Steve Adams</h3>
-                    <p>Origins are unknown, but he tells people he meets 'Oh cool, me too' when they tell him where they're from.</p>
+                    <p>Made this website out of deli meat and grapes.</p>
                 </div>
             </div>
         </div>
