--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
@@ -41,8 +44,8 @@
                     </div> -->
                     <div class="col-lg-12">
                         <h1>We're <strong>Pinecode.</strong></h1>
-                        <p class="lead"><em>We do design, development, and ceaseless whining about PHP<br>
-                        in beautiful Victoria, BC, Canada.</em></p>
+                        <p class="lead"><em>We do design, development, and hopefully Daniel<br>
+                        will think of something to put here.</em></p>
                         <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
                     </div>
                 </div>
