--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,20 +13,20 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-3 service">
+                <div class="col-lg-4 service">
                     <img src="img/service-bubbles/ui-ux.png" alt="UI / UX">
                     <h3>UI/UX</h3>
-                    <p>We know a guy who once put buttons on a website that did a bit more than you'd expect.</p>
+                    <p>Emphasis on Steve's experience</p>
                 </div>
-                <div class="col-lg-3 service col-lg-offset-1">
+                <div class="col-lg-4 service">
                     <img src="img/service-bubbles/development.png" alt="Development">
                     <h3>Development</h3>
-                    <p>We made a WordPress website and we want to make you one too!</p>
+                    <p>Emphasis on Brad's experience</p>
                 </div>
-                <div class="col-lg-3 service col-lg-offset-1">
+                <div class="col-lg-4 service">
                     <img src="img/service-bubbles/design.png" alt="Design">
                     <h3>Design</h3>
-                    <p>We only design the best, most desirable, bespoke, and utterly sensual designs.</p>
+                    <p>Emphasis on Steve's experience</p>
                 </div>
             </div>
         </div>
