--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,3 +1,35 @@
+/**
+ * Pinecode styles.
+ * @author Steve Adams
+ * @authorURI http://pinecode.ca;
+ *
+ * Styles Index
+ *
+ * 1. Document Setup
+ * 2. Structure/Layout
+ *      a. Navbar
+ *      b. Sections
+ *      c. Buttons
+ * 3. Document Sections
+ *      a. Header
+ *      b. Services
+ *      c. About
+ *      d. Portoflio, Portoflio Modals
+ *      e. Contact
+ *      f. Footer
+ * 4.
+ * 5. Miscellaneous
+ *      a. Dividers
+ *      b. Headroom Plugin
+ *      c. Helpers
+ */
+
+/**
+ * -----------------------------------------------------------------------------
+ * 1. DOCUMENT SETUP
+ * -----------------------------------------------------------------------------
+ */
+
 @import url(http://fonts.googleapis.com/css?family='allumi-std':300,400,300italic,400italic);
 
 body {
@@ -36,7 +68,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: 'allumi-std', "Open Sans", Helvetica,Arial,sans-serif;
+    font-family: 'allumi-std', 'Open Sans', Helvetica, Arial, sans-serif;
     font-weight: 100;
 }
 
@@ -50,61 +82,26 @@ hr {
     border-top: 1px solid rgba(0,0,0,.15);
 }
 
-.btn {
-    border-radius: 2px;
-    transition: all 150ms ease;
-}
+/**
+ * -----------------------------------------------------------------------------
+ * 2. STRUCTURE / LAYOUT
+ * -----------------------------------------------------------------------------
+ */
 
-.img-centered {
-    margin: 0 auto;
-}
-
-header {
-    text-align: center;
-    color: #fff;
-    background: black;
-    background-image: url('/img/bg.jpg');
-    background-size: cover;
-    background-position-y: 50%;
-    height: 475px;
-    overflow: hidden;
-    position: relative;
-}
-
-header .container {
-    padding-top: 50px;
-    padding-bottom: 0;
-}
-
-header h1 {
-    font-size: 5rem;
-}
-
-header h1 strong {
-    color: rgba(255, 184, 0, 0.9);
-}
-
-header p.lead {
-    margin: 20px auto 30px;
-}
-
-header .btn, .btn-social {
-    text-transform: uppercase;
-    font-weight: 600
-}
-
-header .btn:hover {
-    background: rgba(0, 130, 255, 0.65);
-}
+/* ----- NAV/NAV-BAR -----*/
 
 nav {
+    background-color: rgba(25, 25, 25, 0.2);
+    transition: background-color .5s, transform 200ms;
+}
+
+nav.navbar-shrink {
     background-color: rgba(25,25,25,0.9);
-    box-shadow: 0 3px 0 rgba(0,0,0,0.1);
-    transition: background-color 0.5s ease;
 }
 
 nav a {
     color: rgba(255,255,255,0.8);
+    text-shadow: 0 2px 0 rgba(0,0,0,0.25);
 }
 
 nav a:hover {
@@ -113,33 +110,6 @@ nav a:hover {
 
 .nav>li>a:focus, .nav>li>a:hover {
     background-color: rgba(0,0,0,0);
-}
-
-#header-logo {
-    position: relative;
-}
-
-.grid-bg {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-image: url('/img/grid.png');
-    background-position: 50% 50%;
-}
-
-@media(min-width:768px) {
-/*    header .container {
-        padding-top: 200px;
-        padding-bottom: 100px;
-    }*/
-
-    header .intro-text .name {
-        font-size: 4.75rem;
-    }
-
-    header .intro-text .skills {
-        font-size: 1.75rem;
-    }
 }
 
 @media(min-width:768px) {
@@ -168,7 +138,7 @@ nav a:hover {
 
 .navbar {
     text-transform: uppercase;
-    font-family: 'allumi-std',"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'allumi-std', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .navbar-header {
@@ -210,6 +180,8 @@ nav a:hover {
     border: 0;
 }
 
+/* ----- SECTIONS -----*/
+
 section {
     padding: 75px 0;
 }
@@ -227,51 +199,111 @@ section h2 {
     font-weight: 100;
 }
 
-
-
-.bg-dark-grey {
-    background-color: rgba(0, 0, 0, 0.95);
-}
-
-.bg-grey {
-    background-color: rgba(0, 0, 0, 0.85);
-}
-
-.bg-brown {
-    background-color: rgba(30, 10, 0, 0.9);
-}
-
-.bg-blue {
-    background-color: rgba(0, 130, 255, 1);
-}
-
-.bg-pine {
-    background-color: rgba(66, 164, 0, 1);
-}
-
-.bg-coral {
-    background-color: rgba(255, 54, 89, 1);
-}
-
-.text-brown {
-    color: rgba(30,10,0,0.85);
-}
-
-.text-blue {
-    color: rgba(0, 130, 255, 0.9);
-}
-
-.text-pine {
-    color: rgba(66, 164, 0, 0.9);
-}
-
-.text-coral {
-    color: rgba(255, 54, 89, 0.9);
-}
-
 .section-overview p {
     margin: 0;
 }
+
+@media(max-width:767px) {
+    section {
+        padding: 75px 0;
+    }
+
+    section.first {
+        padding-top: 75px;
+    }
+}
+
+/* ----- BUTTONS -----*/
+
+.btn {
+    border-radius: 2px;
+    transition: all 150ms ease;
+}
+
+.btn-outline {
+    margin-top: 15px;
+    border: solid 1px rgba(255, 255, 255, 0.25);
+    font-size: 2rem;
+    color: #fff;
+    background: 0 0;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.33);
+    transition: all .3s ease-in-out;
+}
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active,
+.btn-outline.active {
+    border-color: rgba(255, 255, 255, 0);
+    color: #fff;
+    background: rgba(255, 255, 255, 0.15);
+}
+
+/**
+ * -----------------------------------------------------------------------------
+ * SECTION-SPECFIC SYLES
+ * -----------------------------------------------------------------------------
+ */
+
+/* ----- HEADER ----- */
+
+header {
+    text-align: center;
+    color: #fff;
+    background: black;
+    background-image: url('/img/bg.jpg');
+    background-size: cover;
+    background-position-y: 50%;
+    min-height: 300px;
+    overflow: hidden;
+    position: relative;
+}
+
+header .container {
+    padding-top: 50px;
+    padding-bottom: 0;
+}
+
+header h1 {
+    font-size: 5rem;
+}
+
+header h1 strong {
+    color: rgba(255, 184, 0, 0.9);
+}
+
+header p.lead {
+    margin: 20px auto 30px;
+}
+
+header .btn, .btn-social {
+    text-transform: uppercase;
+    font-weight: 600
+}
+
+header .btn:hover {
+    background: rgba(0, 130, 255, 0.65);
+}
+
+@media(min-width:768px) {
+    header .intro-text .name {
+        font-size: 4.75rem;
+    }
+
+    header .intro-text .skills {
+        font-size: 1.75rem;
+    }
+}
+
+.grid-bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url('/img/grid.png');
+    background-position: 50% 50%;
+}
+
+/* ----- SERVICES ----- */
 
 #services {
     background: url(http://subtlepatterns.com/patterns/subtle_dots.png);
@@ -297,13 +329,15 @@ section h2 {
 .service p {
     font-size: 1.5rem;
     margin: 0;
-    padding: 1.5rem 1rem;
+    padding: 1.5rem 3rem;
 }
 
 .service img {
-    max-width: 176px;
+    max-width: 172px;
     width: 100%;
 }
+
+/* ----- ABOUT ----- */
 
 #about {
     background-image: url('img/swash/waves.jpg');
@@ -312,15 +346,13 @@ section h2 {
     background-size: cover;
 }
 
-@media(max-width:767px) {
-    section {
-        padding: 75px 0;
-    }
+/* ----- CONTACT ----- */
 
-    section.first {
-        padding-top: 75px;
-    }
+#contact {
+    background: url(http://subtlepatterns.com/patterns/subtle_dots.png);
 }
+
+/* ----- PORTFOLIO ----- */
 
 #portfolio .portfolio-item {
     right: 0;
@@ -393,158 +425,7 @@ section h2 {
     font-style: italic;
 }
 
-@media(min-width:767px) {
-    #portfolio .portfolio-item {
-        margin: 0 0 30px;
-    }
-}
-
-.btn-outline {
-    margin-top: 15px;
-    border: solid 1px rgba(255, 255, 255, 0.25);
-    font-size: 2rem;
-    color: #fff;
-    background: 0 0;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.33);
-    transition: all .3s ease-in-out;
-}
-
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active {
-    border-color: rgba(255, 255, 255, 0);
-    color: #fff;
-    background: rgba(255, 255, 255, 0.15);
-}
-
-#contact {
-    /*background: url(http://subtlepatterns.com/patterns/pw_maze_white.png);*/
-    /*background: url(http://subtlepatterns.com/patterns/pw_maze_black.png);*/
-    background: url(http://subtlepatterns.com/patterns/cream_dust.png);
-    background: url(http://subtlepatterns.com/patterns/shattered.png);
-    background: url(http://subtlepatterns.com/patterns/subtle_dots.png);
-}
-
-.floating-label-form-group {
-    position: relative;
-    margin-bottom: 0;
-    padding: 0 0 1rem 0;
-    border-bottom: 1px solid #eee;
-}
-
-.floating-label-form-group input,
-.floating-label-form-group textarea {
-    z-index: 1;
-    position: relative;
-    padding-right: 0;
-    padding-left: 0;
-    border: 0;
-    border-radius: 0;
-    font-size: 1.75rem;
-    background: 0 0;
-    box-shadow: none!important;
-    resize: none;
-}
-
-.floating-label-form-group textarea {
-    height: 100px;
-}
-
-.floating-label-form-group label {
-    display: block;
-    z-index: 0;
-    position: relative;
-    top: 1rem;
-    margin: 0;
-    font-size: 1.5rem;
-    line-height: 1.764705882rem;
-    vertical-align: middle;
-    vertical-align: baseline;
-    color: rgba(66, 164, 0, 0.85);
-    opacity: 0;
-    -webkit-transition: top .3s ease,opacity .3s ease;
-    -moz-transition: top .3s ease,opacity .3s ease;
-    -ms-transition: top .3s ease,opacity .3s ease;
-    transition: top .3s ease,opacity .3s ease;
-}
-
-.floating-label-form-group::not(:first-child) {
-    padding-left: 14px;
-    border-left: 1px solid #eee;
-}
-
-.floating-label-form-group-with-value label {
-    font-weight: 100;
-    top: 1rem;
-    opacity: 1;
-}
-
-.floating-label-form-group-with-focus label {
-    color: rgba(0,0,0,0.33);
-}
-
-form .row:first-child .floating-label-form-group {
-    border-top: 1px solid #eee;
-}
-
-footer {
-    color: #fff;
-}
-
-footer h3 {
-    margin-bottom: 30px;
-}
-
-footer .footer-above {
-    padding-top: 25px;
-    background: url(http://subtlepatterns.com/patterns/twinkle_twinkle.png);
-}
-
-footer .footer-col {
-    margin-bottom: 25px;
-}
-
-footer .footer-below {
-    padding: 25px 0;
-}
-
-.btn-social {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    text-align: center;
-    font-size: 20px;
-    line-height: 55px;
-}
-
-.btn:focus,
-.btn:active,
-.btn.active {
-    outline: 0;
-}
-
-.scroll-top {
-    z-index: 1049;
-    position: fixed;
-    right: 2%;
-    bottom: 2%;
-    width: 50px;
-    height: 50px;
-}
-
-.scroll-top .btn {
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    font-size: 20px;
-    line-height: 28px;
-}
-
-.scroll-top .btn:focus {
-    outline: 0;
-}
+/* ----- PORTFOLIO MODALS ----- */
 
 .portfolio-modal .modal-content {
     padding: 100px 0;
@@ -611,68 +492,151 @@ footer .footer-below {
     transform: rotate(90deg);
 }
 
-.pattern-overlay {
-    background: rgba(0,0,0,0.65);
-    padding: 75px 0 32px;
-    height: 100%;
+@media(min-width:767px) {
+    #portfolio .portfolio-item {
+        margin: 0 0 30px;
+    }
 }
 
-.pattern-overlay.subdued {
-    background: rgba(0,0,0,0.35);
-}
+/* ----- FOOTER ----- */
 
-.headroom--pinned {
-    display: block;
-}
-
-.headroom {
-    transition: transform 200ms linear;
-}
-
-.headroom--pinned {
-    transform: translateY(0%);
-}
-
-.headroom--unpinned {
-    transform: translateY(-100%);
-}
-
-.inverted {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-.inverted hr {
-    border-top: 1px solid rgba(255,255,255,.15);
-}
-
-.inverted h2 {
+footer {
     color: #fff;
 }
 
-/*
- * # Semantic - Divider
- * http://github.com/jlukic/semantic-ui/
- *
- *
- * Copyright 2013 Contributors
- * Released under the MIT license
- * http://opensource.org/licenses/MIT
- *
+footer h3 {
+    margin-bottom: 30px;
+}
+
+footer .footer-above {
+    padding-top: 25px;
+    background-color: #111;
+    background-image: url(http://subtlepatterns.com/patterns/twinkle_twinkle.png);
+}
+
+footer .footer-col {
+    margin-bottom: 25px;
+}
+
+footer .footer-below {
+    padding: 25px 0;
+}
+
+.btn-social {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 55px;
+}
+
+
+
+.floating-label-form-group {
+    position: relative;
+    margin-bottom: 0;
+    padding: 0 0 1rem 0;
+    border-bottom: 1px solid #eee;
+}
+
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+    z-index: 1;
+    position: relative;
+    padding-right: 0;
+    padding-left: 0;
+    border: 0;
+    border-radius: 0;
+    font-size: 1.75rem;
+    background: 0 0;
+    box-shadow: none!important;
+    resize: none;
+}
+
+.floating-label-form-group textarea {
+    height: 100px;
+}
+
+.floating-label-form-group label {
+    display: block;
+    z-index: 0;
+    position: relative;
+    top: 1rem;
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: 1.764705882rem;
+    vertical-align: middle;
+    vertical-align: baseline;
+    color: rgba(66, 164, 0, 0.85);
+    opacity: 0;
+    -webkit-transition: top .3s ease,opacity .3s ease;
+    -moz-transition: top .3s ease,opacity .3s ease;
+    -ms-transition: top .3s ease,opacity .3s ease;
+    transition: top .3s ease,opacity .3s ease;
+}
+
+.floating-label-form-group::not(:first-child) {
+    padding-left: 14px;
+    border-left: 1px solid #eee;
+}
+
+.floating-label-form-group-with-value label {
+    font-weight: 100;
+    top: 1rem;
+    opacity: 1;
+}
+
+.floating-label-form-group-with-focus label {
+    color: rgba(0,0,0,0.33);
+}
+
+form .row:first-child .floating-label-form-group {
+    border-top: 1px solid #eee;
+}
+
+.btn:focus,
+.btn:active,
+.btn.active {
+    outline: 0;
+}
+
+.scroll-top {
+    z-index: 1049;
+    position: fixed;
+    right: 2%;
+    bottom: 2%;
+    width: 50px;
+    height: 50px;
+}
+
+.scroll-top .btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    font-size: 20px;
+    line-height: 28px;
+}
+
+.scroll-top .btn:focus {
+    outline: 0;
+}
+
+/**
+ * -----------------------------------------------------------------------------
+ * 5. MISCELLANEOUS
+ * -----------------------------------------------------------------------------
  */
 
-
-/*******************************
-            Divider
-*******************************/
+/* ----- DIVIDERS ----- */
 
 .divider {
   margin: 0rem;
-
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 0em;
 
   line-height: 1;
-  height: 0em;
+  height: auto;
 
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -684,14 +648,9 @@ footer .footer-below {
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
 
-.divider {
-  position: absolute;
+  position: relative;
 
-  border: none;
-  height: 0em;
-  margin: 0em;
   background-color: transparent;
 
   font-size: 0.875rem;
@@ -700,22 +659,8 @@ footer .footer-below {
   text-transform: uppercase;
 
   color: rgba(0, 0, 0, 0.8);
-}
-
-/*--------------
-    Horizontal
----------------*/
-
-.divider {
-  position: relative;
   top: 0%;
   left: 0%;
-
-  /*margin: 1rem 1.5rem;*/
-  height: auto;
-  padding: 0em;
-
-  line-height: 1;
 }
 
 .divider:before,
@@ -743,32 +688,18 @@ footer .footer-below {
   margin-right: -1.5rem;
 }
 
-/*--------------
-      Icon
----------------*/
-
-.divider > .icon {
-  margin: 0em;
-  font-size: 1rem;
-  vertical-align: middle;
-}
-
-
-/*******************************
-            Variations
-*******************************/
-
-
-/*--------------
-    Inverted
----------------*/
+/**
+ * INVERTED DIVIDERS
+ */
 
 .divider.inverted {
   color: rgba(255, 255, 255, 1);
 }
+
 .inverted.divider {
   color: rgba(255, 255, 255, 0.9);
 }
+
 .divider.inverted,
 .divider.inverted:after,
 .divider.inverted:before {
@@ -777,4 +708,50 @@ footer .footer-below {
 
   border-left-color: rgba(0, 0, 0, 0.15);
   border-right-color: rgba(255, 255, 255, 0.15);
+}
+
+/* ----- HEADROOM ----- */
+
+.headroom--pinned {
+    display: block;
+}
+
+.headroom {
+    transition: background-color .5s, transform 200ms;
+}
+
+.headroom--pinned {
+    transform: translateY(0%);
+}
+
+.headroom--unpinned {
+    transform: translateY(-100%);
+}
+
+/* ----- HELPERS ----- */
+
+.inverted {
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.inverted hr {
+    border-top: 1px solid rgba(255,255,255,.15);
+}
+
+.inverted h2 {
+    color: #fff;
+}
+
+.pattern-overlay {
+    background: rgba(0,0,0,0.65);
+    padding: 75px 0;
+    height: 100%;
+}
+
+.pattern-overlay.subdued {
+    background: rgba(0,0,0,0.35);
+}
+
+.img-centered {
+    margin: 0 auto;
 }
