--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,9 @@
  <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="inverted">
+        <div class="pattern-overlay">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div clas="col-lg-12 text-center">
                     <div class="divider">
                         <h2>Get In Touch</h2>
                     </div>
@@ -12,32 +13,30 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" action="//forms.brace.io/echo.pony@gmail.com" novalidate>
+                    <form name="sentMessage" id="contactForm" method="POST" action="//forms.brace.io/echo.pony@gmail.com" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <input type="text" class="form-control" name="name" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
 
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <input type="email" class="form-control" name="email" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
                             </div>
 
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <input type="tel" class="form-control" name="phone" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea rows="5" class="form-control" name="message" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -51,5 +50,6 @@
                     </form>
                 </div>
             </div>
+        </div>
         </div>
     </section>
