--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -30,8 +30,6 @@
  * -----------------------------------------------------------------------------
  */
 
-@import url(http://fonts.googleapis.com/css?family='allumi-std':300,400,300italic,400italic);
-
 body {
     overflow-x: hidden;
     font-weight: 100;
@@ -68,7 +66,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: 'allumi-std', 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Source Sans Pro', 'Open Sans', Helvetica, Arial, sans-serif;
     font-weight: 100;
 }
 
@@ -91,12 +89,12 @@ hr {
 /* ----- NAV/NAV-BAR -----*/
 
 nav {
-    background-color: rgba(25, 25, 25, 0.2);
+    background: rgba(25, 25, 25, 0.2);
     transition: background-color .5s, transform 200ms;
 }
 
 nav.navbar-shrink {
-    background-color: rgba(25,25,25,0.9);
+    background: rgba(25,25,25,0.9);
 }
 
 nav a {
@@ -138,7 +136,7 @@ nav a:hover {
 
 .navbar {
     text-transform: uppercase;
-    font-family: 'allumi-std', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .navbar-header {
@@ -149,14 +147,14 @@ nav a:hover {
     position: relative;
     left: 0;
     padding-left: 42px;
-    transition: all 0.5s linear;
+    transition: all 0.5s;
 }
 
 .navbar-header a img {
     position: absolute;
     left: 0;
     top: 8px;
-    transition: all 0.5s linear;
+    transition: all 0.5s;
 }
 
 .navbar-header.navbar-shrink a img {
@@ -226,7 +224,7 @@ section h2 {
     font-size: 2rem;
     color: #fff;
     background: 0 0;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.33);
+    text-shadow: 0 2px 0 rgba(0,0,0,0.33);
     transition: all .3s ease-in-out;
 }
 
@@ -257,6 +255,7 @@ header {
     min-height: 300px;
     overflow: hidden;
     position: relative;
+    text-shadow: 0 2px 0 rgba(0,0,0,0.5);
 }
 
 header .container {
@@ -269,7 +268,7 @@ header h1 {
 }
 
 header h1 strong {
-    color: rgba(255, 184, 0, 0.9);
+    color: rgb(255, 184, 0);
 }
 
 header p.lead {
@@ -306,8 +305,17 @@ header .btn:hover {
 /* ----- SERVICES ----- */
 
 #services {
-    background: url(http://subtlepatterns.com/patterns/subtle_dots.png);
+    background: url(http://subtlepatterns.com/patterns/brillant.png);
+}
 
+#services img {
+    width: 100%;
+    max-width: 256px;
+    margin: 0 auto;
+}
+
+#services hr {
+    visibility: hidden;
 }
 
 .service, .service h3 {
@@ -349,7 +357,73 @@ header .btn:hover {
 /* ----- CONTACT ----- */
 
 #contact {
-    background: url(http://subtlepatterns.com/patterns/subtle_dots.png);
+    padding: 0;
+    background: url(http://31.media.tumblr.com/560a35b8fb40b1c069fa18ef9f2ea179/tumblr_n4cm73ozlb1st5lhmo1_1280.jpg);
+    background-size: cover;
+    background-position: 50%;
+    position: relative;
+}
+
+.floating-label-form-group {
+    position: relative;
+    margin-bottom: 0;
+    padding: 0 0 1rem 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.floating-label-form-group input,
+.floating-label-form-group textarea {
+    z-index: 1;
+    position: relative;
+    padding-right: 0;
+    padding-left: 0;
+    border: 0;
+    border-radius: 0;
+    font-size: 1.75rem;
+    background: 0 0;
+    box-shadow: none!important;
+    resize: none;
+}
+
+.floating-label-form-group textarea {
+    height: 100px;
+}
+
+.floating-label-form-group label {
+    display: block;
+    z-index: 0;
+    position: relative;
+    top: 1rem;
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: 1.764705882rem;
+    vertical-align: middle;
+    vertical-align: baseline;
+    color: rgba(66, 164, 0, 0.85);
+    opacity: 0;
+    -webkit-transition: top .3s ease,opacity .3s ease;
+    -moz-transition: top .3s ease,opacity .3s ease;
+    -ms-transition: top .3s ease,opacity .3s ease;
+    transition: top .3s ease,opacity .3s ease;
+}
+
+.floating-label-form-group::not(:first-child) {
+    padding-left: 14px;
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.floating-label-form-group-with-value label {
+    font-weight: 100;
+    top: 1rem;
+    opacity: 1;
+}
+
+.floating-label-form-group-with-focus label {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+form .row:first-child .floating-label-form-group {
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 /* ----- PORTFOLIO ----- */
@@ -511,7 +585,6 @@ footer h3 {
 footer .footer-above {
     padding-top: 25px;
     background-color: #111;
-    background-image: url(http://subtlepatterns.com/patterns/twinkle_twinkle.png);
 }
 
 footer .footer-col {
@@ -530,70 +603,6 @@ footer .footer-below {
     text-align: center;
     font-size: 20px;
     line-height: 55px;
-}
-
-
-
-.floating-label-form-group {
-    position: relative;
-    margin-bottom: 0;
-    padding: 0 0 1rem 0;
-    border-bottom: 1px solid #eee;
-}
-
-.floating-label-form-group input,
-.floating-label-form-group textarea {
-    z-index: 1;
-    position: relative;
-    padding-right: 0;
-    padding-left: 0;
-    border: 0;
-    border-radius: 0;
-    font-size: 1.75rem;
-    background: 0 0;
-    box-shadow: none!important;
-    resize: none;
-}
-
-.floating-label-form-group textarea {
-    height: 100px;
-}
-
-.floating-label-form-group label {
-    display: block;
-    z-index: 0;
-    position: relative;
-    top: 1rem;
-    margin: 0;
-    font-size: 1.5rem;
-    line-height: 1.764705882rem;
-    vertical-align: middle;
-    vertical-align: baseline;
-    color: rgba(66, 164, 0, 0.85);
-    opacity: 0;
-    -webkit-transition: top .3s ease,opacity .3s ease;
-    -moz-transition: top .3s ease,opacity .3s ease;
-    -ms-transition: top .3s ease,opacity .3s ease;
-    transition: top .3s ease,opacity .3s ease;
-}
-
-.floating-label-form-group::not(:first-child) {
-    padding-left: 14px;
-    border-left: 1px solid #eee;
-}
-
-.floating-label-form-group-with-value label {
-    font-weight: 100;
-    top: 1rem;
-    opacity: 1;
-}
-
-.floating-label-form-group-with-focus label {
-    color: rgba(0,0,0,0.33);
-}
-
-form .row:first-child .floating-label-form-group {
-    border-top: 1px solid #eee;
 }
 
 .btn:focus,
@@ -743,13 +752,13 @@ form .row:first-child .floating-label-form-group {
 }
 
 .pattern-overlay {
-    background: rgba(0,0,0,0.65);
+    background: rgba(0,0,0,0.66);
     padding: 75px 0;
     height: 100%;
 }
 
 .pattern-overlay.subdued {
-    background: rgba(0,0,0,0.35);
+    background: rgba(0,20,50,0.33);
 }
 
 .img-centered {
