--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,33 +1,32 @@
- <!-- About Section -->
+    <!-- Services Section -->
     <section id="services" class="">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="divider">
-                        <h2>Services</h2>
-                    </div>
-                    <div class="section-overview">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit excepturi recusandae veniam officia optio aliquid tenetur quos ratione ducimus quidem dolorum enim accusamus nam, facere officiis illum ab velit quam.</p>
-                    </div>
+                <div class="col-lg-2">
+                    <img src="img/service-bubbles/ui-ux.png" alt="UI / UX">
+                </div>
+                <div class="col-lg-6 col-lg-offset-1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In enim similique doloribus eligendi cumque velit dignissimos voluptas a autem vel aliquid, explicabo quas deleniti ducimus iusto, provident cupiditate magnam sapiente!</p>
                 </div>
             </div>
-
+            <hr>
             <div class="row">
-                <div class="col-lg-4 service">
-                    <img src="img/service-bubbles/ui-ux.png" alt="UI / UX">
-                    <h3>UI/UX</h3>
-                    <p>Emphasis on Steve's experience</p>
+                <div class="col-lg-6 col-lg-offset-3">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In enim similique doloribus eligendi cumque velit dignissimos voluptas a autem vel aliquid, explicabo quas deleniti ducimus iusto, provident cupiditate magnam sapiente!</p>
                 </div>
-                <div class="col-lg-4 service">
+                <div class="col-lg-2 col-lg-offset-1">
                     <img src="img/service-bubbles/development.png" alt="Development">
-                    <h3>Development</h3>
-                    <p>Emphasis on Brad's experience</p>
                 </div>
-                <div class="col-lg-4 service">
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-lg-2">
                     <img src="img/service-bubbles/design.png" alt="Design">
-                    <h3>Design</h3>
-                    <p>Emphasis on Steve's experience</p>
+                </div>
+                <div class="col-lg-6 col-lg-offset-1">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In enim similique doloribus eligendi cumque velit dignissimos voluptas a autem vel aliquid, explicabo quas deleniti ducimus iusto, provident cupiditate magnam sapiente!</p>
                 </div>
             </div>
         </div>
     </section>
+
