--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#who-we-are">Who We Are</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
