--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -44,7 +44,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success">Send</button>
+                                <button type="submit" class="btn blue">Send</button>
                             </div>
                         </div>
                     </form>
