--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
+    {% include who-we-are.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include js.html %}
