Improved contact form process, removed validation

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -11,8 +11,7 @@
     <script src="{{ "/js/jquery.autogrowtextarea.min.js" | prepend: site.baseurl }}"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="{{ "/js/jqBootstrapValidation.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/contact.js" | prepend: site.baseurl }}"></script>
 
-    <!-- Custom Theme JavaScript -->
+    <!-- Custom JavaScript -->
     <script src="{{ "/js/pinecode.js" | prepend: site.baseurl }}"></script>
