--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -17,27 +17,23 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Name</label>
-                                <input type="text" class="form-control" name="name" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
+                                <input type="text" class="form-control" name="name" placeholder="Name" id="name">
                             </div>
 
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Email Address</label>
-                                <input type="email" class="form-control" name="email" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
+                                <input type="email" class="form-control" name="email" placeholder="Email Address" id="email">
                             </div>
 
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Phone Number</label>
-                                <input type="tel" class="form-control" name="phone" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
+                                <input type="tel" class="form-control" name="phone" placeholder="Phone Number" id="phone">
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Message</label>
-                                <textarea rows="5" class="form-control" name="message" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
+                                <textarea rows="5" class="form-control" name="message" placeholder="Message" id="message"></textarea>
                             </div>
                         </div>
                         <br>
