--- a/_includes/who-we-are.html
+++ b/_includes/who-we-are.html
@@ -2,6 +2,20 @@
     <section id="who-we-are" class="">
         <div class="container">
             <div class="row">
+                <div class="col-lg-12">
+                    <div class="divider">
+                        <h2>Who Is Pinecode?</h2>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas possimus veritatis reprehenderit assumenda accusantium similique esse quibusdam animi, doloribus delectus numquam. Asperiores debitis delectus cupiditate, modi deleniti illo voluptatibus eligendi!</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
                 <div class="col-lg-2">
                     <img src="img/service-bubbles/ui-ux.png" alt="UI / UX">
                 </div>
