--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,8 +38,8 @@
                 <div class="row parallax">
                     <div class="col-lg-12">
                         <h1>We're <strong>Pinecode.</strong></h1>
-                        <p class="lead"><em>We do design, development, and hopefully Daniel<br>
-                        will think of something to put here.</em></p>
+                        <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers,<br>
+                        and creative folk from the gardens of Victoria, British Columbia.</em></p>
                         <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
                     </div>
                 </div>
