Major layout change, removed all about/services/etc focus on header and contact

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
  <!-- Contact Section -->
     <section id="contact" class="inverted">
         <div class="pattern-overlay">
-        <div class="container">
+        <div class="container vertical-centered">
             <div class="row">
                 <div clas="col-lg-12 text-center">
                     <div class="divider">
