--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,42 +1,10 @@
-   <!-- Navigation -->
-    <nav class="navbar navbar-fixed-top headroom">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo48.png" alt="pinecode logo"> {{ site.title }}</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#who-we-are">Who We Are</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
     <header class="content-section">
         <div class="pattern-overlay subdued">
             <div class="grid-bg"></div>
             <div class="container">
                 <div class="row parallax">
                     <div class="col-lg-12">
+                        <img src="img/logo256.png" class="img-centered" alt="">
                         <h1>We're <strong>Pinecode.</strong></h1>
                         <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers,<br>
                         and creative folk from the gardens of Victoria, British Columbia.</em></p>
@@ -46,9 +14,3 @@
             </div>
         </div>
     </header>
-
-<!--
-        {% for page in site.pages %}
-          {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
-        {% endfor %}
- -->
