--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
     <header class="content-section">
         <div class="pattern-overlay subdued">
             <div class="grid-bg"></div>
-            <div class="container">
+            <div class="container vertically-centered">
                 <div class="row parallax">
                     <div class="col-lg-12">
                         <img src="img/logo256.png" class="img-centered" alt="">
