Repaired vertical centering

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -39,8 +39,8 @@
                         <br>
                         <div id="success"></div>
                         <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn blue">Send</button>
+                            <div class="form-group col-lg-4 col-lg-offset-4">
+                                <button type="submit" class="btn btn-lg btn-block blue">Send</button>
                             </div>
                         </div>
                     </form>
