--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -260,7 +260,7 @@ header {
     background-image: url('/img/bg.jpg');
     background-size: cover;
     background-position-y: 50%;
-    min-height: 100%;
+    height: 100%;
     position: relative;
     text-shadow: 0 2px 0 rgba(0,0,0,0.5);
 }
@@ -302,6 +302,11 @@ header .btn:hover {
     position: absolute;
     background-image: url('/img/grid.png');
     background-position: 50% 50%;
+}
+
+header .container {
+    padding: 0;
+    height: 540px;
 }
 
 /* ----- SERVICES ----- */
@@ -385,6 +390,10 @@ header .btn:hover {
     background-size: cover;
     background-position: 50%;
     position: relative;
+}
+
+#contact .container {
+    height: 350px;
 }
 
 .floating-label-form-group {
@@ -797,7 +806,6 @@ footer .footer-below {
 }
 
 .vertically-centered {
-    height: 100%;
     margin: auto;
     padding: 0;
     position: absolute;
