--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="container vertically-centered">
                 <div class="row parallax">
                     <div class="col-lg-12">
-                        <img src="img/logo256.png" class="img-centered" alt="">
+                        <img src="img/logo256.png" id="logo" class="img-centered" alt="">
                         <h1>We're <strong>Pinecode.</strong></h1>
                         <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers,<br>
                         and creative folk from the gardens of Victoria, British Columbia.</em></p>
