--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -40,7 +40,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-lg-4 col-lg-offset-4">
-                                <button type="submit" class="btn btn-lg btn-block blue">Send</button>
+                                <button type="submit" class="btn btn-outline btn-lg btn-block">Send</button>
                             </div>
                         </div>
                     </form>
