--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form name="sentMessage" id="contactForm" method="POST" action="//forms.brace.io/echo.pony@gmail.com" novalidate>
+                    <form name="sentMessage" id="contactForm" method="POST" action="//forms.brace.io/daniel@pinecode.ca" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-4 floating-label-form-group controls">
                                 <label>Name</label>
