--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,13 @@
             <div class="container vertically-centered">
                 <div class="row parallax">
                     <div class="col-lg-12">
-                        <img src="img/logo256.png" id="logo" class="img-centered" alt="">
-                        <h1>We're <strong>Pinecode.</strong></h1>
-                        <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers,<br>
-                        and creative folk from the gardens of Victoria, British Columbia.</em></p>
-                        <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
+                        <img src="img/logo256.png" id="hero-logo" class="img-centered" alt="">
+                        <div id="hero-content">
+                            <h1>We're <strong>Pinecode.</strong></h1>
+                            <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers,<br>
+                            and creative folk from the gardens of Victoria, British Columbia.</em></p>
+                            <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
+                        </div>
                     </div>
                 </div>
             </div>
